# ogm-agent-bridge

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api-audit.md  architecture.md  backup-recovery.md  claude-code.md  configuration.md  conformance.md  hermes.md  opencode.md  plan.md  release.md  resource-guidance.md  security.md  session-lifecycle.md  tools.md  troubleshooting.md  upgrade-uninstall.md
examples/claude-code/: .mcp.json.example
examples/hermes/: config.yaml.example
examples/opencode/: opencode.json.example
src/ogm_agent_bridge/: __init__.py  agent_memory_tools.py  client.py  config.py  errors.py  logging.py  mcp_server.py  permissions.py  responses.py  state.py  tools.py  write_tools.py
tests/conformance/: test_b4.py
tests/contract/: test_agent_memory_tools.py  test_client.py  test_graph_tools.py  test_memory.py  test_query.py  test_read_tools.py  test_write_tools.py
tests/integration/: test_real_core_smoke.py
tests/unit/: test_config.py  test_docs.py  test_errors.py  test_harness_examples.py  test_logging.py  test_mcp_server.py  test_package.py  test_workflows.py
