[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ogm-agent-bridge"
version = "0.0.0"
description = "MCP bridge for OpenGraphMemory"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "httpx>=0.27,<1",
  "python-dotenv>=1,<2",
]

[dependency-groups]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.5,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src"]
