[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "ogm-agent-bridge"
version = "0.1.0"
description = "MCP bridge for OpenGraphMemory"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Ardian Nurcahya" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.0,<2",
  "python-dotenv>=1,<2",
]

[project.urls]
Homepage = "https://github.com/ardiannurcahya/ogm-agent-bridge"
Repository = "https://github.com/ardiannurcahya/ogm-agent-bridge"
Issues = "https://github.com/ardiannurcahya/ogm-agent-bridge/issues"

[project.scripts]
ogm-agent-bridge = "ogm_agent_bridge.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ogm_agent_bridge"]

[dependency-groups]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.5,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src"]
